# GTMatrix

./: .gitignore  CMakeLists.txt  GTMatrixConfig.cmake  build.sh
share/cmake/GTMatrix/: GTMatrixConfig.cmake  GTMatrixTargets-noconfig.cmake  GTMatrixTargets.cmake
test/: testall.sh
